# cloudnet-processing

./: #.pre-commit-config.yaml#  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .pylintrc  Dockerfile  LICENSE  README.md  _typos.toml  deploy  dev.env  dev.env.template  e2e-test.env  post-receive  pyproject.toml  pytest.ini  release-version  run  run-bash  setup.py  test.env
.github/: dataportal.env  db.env  docker-compose.yml  ss.env  test.env
.github/initdb.d/: init-dbs.sh
.github/workflows/: docker.yml  test.yml  test2.yml
config/: bucharest.ini  main.ini
config/private/: 21.T12995_USER01_309_certificate_only.pem  21.T12995_USER01_309_privkey.pem
hooks/: post-receive-cloudnetpy  post-receive-operational-processing  post-receive-transition-scripts
scripts/: classification.sh  cloudnet  cloudnet.py  cloudnet2.py  concat-lidar.py  create-images.py  create-qc-reports.py  dvas-integration.py  dvas-json.py  fetch-data-to-dev.py  fix-model-files.py  freeze.py  map-variable-names.py  monitor  plot-missing-images.py  plot-quicklooks.py  process-cloudnet.py  process-latest-halo.py  process-latest-l3.py  process-latest-products.py  process-latest-raw.py  process-latest.py  process-missing-models.py  process-model-evaluation.py  process-model.py  process-realtime.py  process_cloudnet.py  process_latest_products.py  process_latest_raw.py  process_missing_models.py  put-legacy-files.py  put-missing-files.py  put-missing-images.py  queuer.py  run-data-submission-api.py  run-qc-for-latest-products.py  submit-data-to-dev.py  sync-folders.py  worker.py  wrapper.py
scripts/cronjobs/: earthcare-validation.py  freeze.py  yesterdays-qc.py
src/cloudnet_processing/: instrument_process.py  metadata_api.py  nc_header_augmenter.py  pid_utils.py  processing_tools.py  storage_api.py  utils.py  version.py
src/cloudnet_processing/subcmds/: create_images.py  create_qc_reports.py  freeze.py  process_cloudnet.py  process_model.py  process_model_evaluation.py
src/data_processing/: __init__.py  concat_lib.py  concat_wrapper.py  config.py  data_submission_api.py  dvas.py  file_paths.py  freeze.py  generate_pid.py  instrument_process.py  metadata_api.py  modifier.py  nc_header_augmenter.py  netcdf_utils.py  pid_generator.py  pid_utils.py  processing_tools.py  storage_api.py  utils.py  version.py
src/data_processing/subcmds/: create_images.py  create_qc_reports.py  fetch_data_to_dev.py  freeze.py  process_cloudnet.py  process_housekeeping.py  process_model.py  process_model_evaluation.py  upload_to_dvas.py
src/earthcare/: classification.py  cpr_l1b.py  ec.py  utils.py
src/housekeeping/: __init__.py  basta.py  ceilo.py  chm15k.py  cl61.py  config.toml  exceptions.py  generate_docs.py  halo_doppler_lidar.py  hatpro.py  housekeeping.py  utils.py  variables.md
src/monitoring/: README.md  __main__.py  cli.py  colors.py  config.py  core.py  halo_doppler_lidar.py  instrument.py  monitor.py  monitor_options.py  monitoring_file.py  options.py  period.py  period_utils.py  plot_utils.py  product.py  utils.py
src/monitoring/instrument/: halo_doppler_lidar.py
src/monitoring/instruments/: halo_doppler_lidar.py
src/old-monitoring/: monitoring_file.py  processor.py
src/operational-processing/: __init__.py  concat_lib.py  file_paths.py  generate-pid.py  generate_pid.py  metadata_api.py  utils.py
src/operational_processing/: __init__.py  generate_pid.py  metadata_api.py  modifier.py  utils.py
src/processing/: concat_wrapper.py  config.py  dvas.py  fetch.py  housekeeping_utils.py  instrument.py  instrument_process.py  jobs.py  metadata_api.py  model.py  monitoring_utils.py  nc_header_augmenter.py  netcdf_comparer.py  pid_utils.py  processor.py  product.py  storage_api.py  utils.py  version.py
src/processing/harmonizer/: __init__.py  core.py  doppler_lidar.py  halo_calibrated.py  hatpro.py  legacy.py  model.py  parsivel.py  rain_gauge.py  ws.py
src/test_utils/: server.py  utils.py
tests/: conftest.py  test_api.py  test_concat_lib.py  test_file_paths.py  test_utils.py
tests/data/: 20180703_granada_classification.nc  20180703_granada_classification_reprocessed.nc
tests/data/config/: mace-head.ini  main.ini  norunda.ini
tests/data/misc/: 20180703_granada_classification_old.nc
tests/data/output_fixed/: 20200513_bucharest_ecmwf.nc  20200513_granada_ecmwf.nc  20200514_bucharest_ecmwf.nc  20200514_granada_ecmwf.nc  20200514_norunda_ecmwf.nc
tests/data/products/: 20201022_bucharest_ecmwf.nc  20201022_bucharest_hatpro.nc  20201121_bucharest_classification.nc  20210911_hyytiala_cl61d.nc  legacy_classification.nc
tests/e2e/: conftest.py  e2e.py  server.py  tests.py
tests/e2e/concat_lidar/: lidar_tests.py  main.py  tests.py
tests/e2e/data_submission/: main.py  tests.py
tests/e2e/fix_model_files/: main.py  tests.py
tests/e2e/freeze/: main.py  tests.py
tests/e2e/images/: main.py  tests.py
tests/e2e/model_data_submission/: main.py  tests.py
tests/e2e/process_categorize/: main.py  tests.py
tests/e2e/process_chm15k/: main.py  tests.py
tests/e2e/process_cl61d/: main.py  tests.py
tests/e2e/process_cl61d_2/: main.py  tests.py
tests/e2e/process_classification/: main.py  tests.py
tests/e2e/process_classification_2/: main.py  tests.py
tests/e2e/process_cloudnet/: main.py  tests.py
tests/e2e/process_mira/: main.py  tests.py
tests/e2e/process_model/: main.py  tests.py
tests/e2e/process_model_evaluation/: main.py  tests.py
tests/e2e/process_rpg-fmcw-94/: main.py  tests.py
tests/integration/: test.py
tests/lib/: utils.py
tests/unit/: conftest.py  test_concat_lib.py  test_concat_wrapper.py  test_data_submission_api.py  test_file_paths.py  test_generate_pid.py  test_housekeeping.py  test_instrument_process.py  test_metadata_api.py  test_model_processing.py  test_nc_header_augmenter.py  test_storage_api.py  test_utils.py  test_utils_module.py
(+96 files in other folders)
