[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudnet-processing"
description = "Glue code for Cloudnet processing libraries"
authors = [{name = "Finnish Meteorological Institute"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "ceilopyter",
  "cftime",
  "cloudnetpy[extras]>=1.77.0",
  "cloudnetpy_qc>=1.25.8",
  "doppy>=0.3.5",
  "influxdb-client",
  "model-munger @ git+https://github.com/actris-cloudnet/model-munger.git@v0.2.0",
  "orbital-radar @ git+https://github.com/actris-cloudnet/orbital-radar.git@v0.0.3",
  "requests",
  "rpgpy>=0.15.10",
  "toml",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "release-version",
  "types-influxdb-client",
  "types-requests",
  "types-toml",
  "types-urllib3",
]

[project.urls]
Homepage = "https://github.com/actris-cloudnet/cloudnet-processing"
Repository = "https://github.com/actris-cloudnet/cloudnet-processing"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["cftime.*"]
ignore_missing_imports = true

# Skip modules that seem to slow up mypy.
[[tool.mypy.overrides]]
module = ["torch.*", "wandb.*"]
follow_imports = "skip"

[tool.release-version]
filename = "src/processing/version.py"
pattern = ["MAJOR = (?P<major>\\d+)", "MINOR = (?P<minor>\\d+)", "PATCH = (?P<patch>\\d+)"]

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.dynamic]
version = {attr = "processing.version.__version__"}

[tool.tomlsort]
trailing_comma_inline_array = true
sort_inline_arrays = true
